--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }],
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": ">=2.0.0",
+        "symfony/framework-bundle": ">=2.0.0"
     },
     "autoload": {
         "psr-0": {
