--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }],
     "require": {
         "php": ">=5.3.2",
-        "symfony/symfony": ">=2.0.*@dev"
+        "symfony/symfony": ">=v2.0.24"
     },
     "autoload": {
         "psr-0": {
