--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
             "email": "juanber84@gmail.com"
         }],
     "require": {
-        "php": ">=5.3.2",
-        "symfony/symfony": ">=2.0.7"
+        "php": ">=5.3.2"
     },
     "autoload": {
         "psr-0": {
